# Equipo-17-Pymes

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 59413fc4ac2a_create_model_credits.py  9087a88029a2_add_roles_for_user.py  a3a4b524fb64_model_user.py  daa8b58c6422_create_model_pyme.py
backend/app/api/: main.py
backend/app/api/routers/: auth.py  credits.py  documents.py  pyme.py  reviews.py  user.py
backend/app/core/: config.py  database.py
backend/app/crud/: abstract.py  credits.py  documents.py  pyme.py  reviews.py  user.py
backend/app/models/: credits.py  documents.py  enums.py  models.py  pyme.py  reviews.py  user.py
backend/app/schemas/: credits.py  documents.py  pyme.py  reviews.py  user.py
backend/app/utils/: contraseñas.py  logInGoogle.py  oauth2.py  recuperar_password.py  reset_password.py  user.py
fontend/: app.js  home-styles.css  home.html  log-in.html  password-user.html  recover-account.html  register-user.html  styles.css
frontend/: app.js  dashboard.html  log-in.html  password-user.html  recover-account.html  register-user.html
frontend/static/css/: form-style.css  home-styles.css
frontend/templates/: concept.txt  dashboard.html  form-data.html  index.html
