[project]
name = "equipo-17-pymes"
version = "0.1.0"
description = ""
authors = [
    {name = "-"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "sqlalchemy (==2.0.43)",
    "psycopg (==3.2.1)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "jinja2 (>=3.0.0,<4.0.0)",
    "gunicorn (>=22.0.0,<23.0.0)",
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
